--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "homepage": "https://github.com/youthweb/styleguide#readme",
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.4",
-    "@fortawesome/fontawesome-free-solid": "^5.0.8",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
     "bootstrap": "^4.0.0",
+    "file-loader": "^1.1.11",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.0"
+    "popper.js": "^1.14.0",
+    "url-loader": "^1.0.1"
   },
   "devDependencies": {
     "css-loader": "^0.28.9",
