--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youthweb-styleguide",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "The Styleguide for Youthweb.net",
   "private": true,
   "main": "index.js",
