--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "postcss-loader": "^2.1.6",
     "precss": "^3.1.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^3.12.0"
+    "webpack": "^4.29.1",
+    "webpack-cli": "^3.2.1"
   },
   "nodemonConfig": {
     "watch": [
